Bug 136911 - Impress fails to import PPT hyperlink
Summary: Impress fails to import PPT hyperlink
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: nd101
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-21 05:51 UTC by nd101
Modified: 2020-11-30 13:19 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample ppt document (55.50 KB, application/vnd.ms-powerpoint)
2020-09-21 05:54 UTC, nd101
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nd101 2020-09-21 05:51:45 UTC
Description:
For attached PPT document, Impress fails to import hyperlinks.

Steps to Reproduce:
1.Open the attached MSO ppt
2.
3.

Actual Results:
Links are missing

Expected Results:
Two hyper links should work like they do in MSO


Reproducible: Always


User Profile Reset: No



Additional Info:
No links
Comment 1 nd101 2020-09-21 05:54:02 UTC
Created attachment 165706 [details]
sample ppt document
Comment 2 nd101 2020-09-21 06:15:17 UTC
Patch submitted, https://gerrit.libreoffice.org/c/core/+/103081
Comment 3 Commit Notification 2020-11-26 16:54:10 UTC
nd101 committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f516c0bd3bb69bf9f18160c03bd7309774f88057

tdf#136911 fix ppt hyperlink import

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-11-30 10:07:28 UTC
Verified in

Version: 7.2.0.0.alpha0+
Build ID: 79ec66700266a22966d9e308a716be56c9c3a4a7
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@nd101, thanks for fixing this issue!!
Comment 5 Commit Notification 2020-11-30 13:19:15 UTC
nd101 committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/965e0c147a31b25967a29449d8d7d6c40fc9b50a

tdf#136911 fix ppt hyperlink import

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.