tdf#136911 fix ppt hyperlink import

If the hyperlink list is not found, try the secondary approach
by searching through the record list.

Change-Id: I5b3516e1005b102fb3b79f55c2485a7c41b56057
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/103081
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>